--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -52,8 +52,8 @@ jobs:
 #       with:
 #         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
 #         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#         application_name: django-todo-app-ebs
-#         environment_name: django-todo-app-ebs
+#         application_name: django
+#         environment_name: django-env
 #         version_label: 12348
 #         aws-region: ${{secrets.AWS_REGION}}
 #         deployment_package: deploy.zip
