--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -36,25 +36,25 @@ jobs:
  
   
   
-#   deploy:
-#     needs: [test]
-#     runs-on: ubuntu-latest
+  deploy:
+    needs: [test]
+    runs-on: ubuntu-latest
 
-#     steps:
-#     - name: Checkout source code
-#       uses: actions/checkout@v2
+    steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2
 
-#     - name: Generate deployment package
-#       run: zip -r deploy.zip . -x '*.git*'
+    - name: Generate deployment package
+      run: zip -r deploy.zip . -x '*.git*'
 
-#     - name: Deploy to EB
-#       uses: einaregilsson/beanstalk-deploy@v20
-#       with:
-#         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#         application_name: django
-#         environment_name: django-env
-#         version_label: 12348
-#         aws-region: ${{secrets.AWS_REGION}}
-#         deployment_package: deploy.zip
+    - name: Deploy to EB
+      uses: einaregilsson/beanstalk-deploy@v20
+      with:
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        application_name: django
+        environment_name: django-env
+        version_label: 12348
+        aws-region: ${{secrets.AWS_REGION}}
+        deployment_package: deploy.zip
 
